# resolver

./: .env.example  .gitignore  Cargo.toml  README.md  SKILL.md  foundry.toml
contractregistry/: ILivyAttestationRegistry.sol  foundry.toml  registry.sol  tree.sol
contractregistry/test/: LivyAttestationRegistry.t.sol  Tree.t.sol
contracts/: LivyAttestationRegistry.sol
docs/: mcp-tools.md
src/: api.rs  attest.rs  auth.rs  config.rs  credits.rs  errors.rs  fetch.rs  main.rs  mcp.rs  provenance.rs  security.rs  snapshot_upload.rs  types.rs
