[package]
name = "livygensyn"
author = "protocolwhisper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.9" , features = ["macros"]}
dotenvy = "0.15.7"
livy-tee = { version = "0.1.1" , features = ["mock-tee", "ita-verify"]}
reqwest = "0.12.28"
serde = {version = "1.0.228" , features = ["derive"]}
serde_json = "1.0.149"
spider-client = "0.1.87"
thiserror = "2.0.18"
tokio = {version = "1.52.1" , features= ["rt-multi-thread"]}

